# epanel-r

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  safari_sync.rs  ui.rs
