[package]
name = "epanel"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/abiheiri/epanel-r"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
flate2 = "1.1.9"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
ureq = "3.3.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3"
